Made a test on MealController